# sankey-svg-took

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  桑基图.py
.github/workflows/: build-desktop.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
