[package]
name = "sankey-svg-tool"
version = "0.1.0"
description = "Lightweight Sankey SVG Tool"
authors = ["bingchen"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
